mType/tests/testFiles/lombok/error/getter_on_function_error.mt
// @Getter targets CLASS/FIELD only — applying it to a top-level function is a
// @Target violation.
@Getter
public function doStuff(): void {
    print("hi");
}

doStuff();
